--- a/Datentypen.Rmd
+++ b/Datentypen.Rmd
@@ -1,32 +1,36 @@
 ---
-title: "Datentypen"
+title: "Test02"
 author: "Erich Neuwirth"
 date: "1/18/2021"
-output:
-  pdf_document: default
-  html_document: default
+output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+Mein erstes Stück R-Code
+
+```{r}
+1:10
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+11:20 -> v
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+str(v)
+```
+```{r}
+v[3:5]
+```
+```{r}
+txt <- c("a","x","z")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+str(txt)
+```
+```{r}
+library(readxl)
+studdat <- read_excel(file.path("Daten","StudierendenDaten",
+                                "StudDat.xlsx"))
+```
+
